--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 </head>
 <body>
     <header>
-        <section class="wrap-1">
+        <section class="wrap-1" id="home">
             <div class="container">
                 <div class="row align-center justify-space-bet">
                     <div class="col-3">
                         <h1>Portfolio</h1>
                     </div>
                     <div class="col-7">
-                        <nav>
-                            <ul class="flex justify-space-bet">
-                                <li><a href="">HOME</a></li>
-                                <li><a href="">ABOUT</a></li>
-                                <li><a href="">PORTFOLIO</a></li>
-                                <li><a href="">EXPERIENCE</a></li>
-                                <li><a href="">CONTACT</a></li>
-                            </ul>
-                        </nav>
+                        <div class="collapse">
+                            <nav>
+                                <ul class="flex justify-space-bet">
+                                    <li><a href="#home">HOME</a></li>
+                                    <li><a href="#about">ABOUT</a></li>
+                                    <li><a href="#portfolio">PORTFOLIO</a></li>
+                                    <li><a href="#exp">EXPERIENCE</a></li>
+                                    <li><a href="#contact">CONTACT</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <button class="toggle"><span></span><span></span><span></span></button>
                     </div>
                 </div>
             </div>
@@ -37,22 +40,22 @@
                     <h4>I HAVE MORE THEN 10 YEARS OF EXPERIENCE</h4>
                     <div class="btn">
                         <a href="./CV/Gaurav-CV.pdf" download>Download CV</a>
-                        <a href="#">Visit Github</a>
+                        <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
                     </div>
                 </div>
             </div>
         </section>
     </header>
-    <section class="wrap-3">
+    <section class="wrap-3" id="about">
         <div class="container">
             <h2>ABOUT</h2>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 col-t-7 col-p-12" id="orders">
                     <h3>Gaurav Singh</h3>
                     <h4>Web Developer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta minus ipsa vero quo vel. Eum nam illum ipsam minima qui quia. Cumque quo numquam laboriosam, rerum placeat vero? Tempore ex quae quod soluta quo necessitatibus? Placeat optio consectetur quod? Porro voluptatum ipsam saepe ab dolores provident eum rem ducimus itaque!</p>
                 </div>
-                <div class="col-5">
+                <div class="col-5 col-t-5 col-p-12">
                     <img src="./Image/about5.jpg" alt="coding" width="1000" height="667">
                 </div>
             </div>
@@ -61,7 +64,7 @@
     <section class="wrap-5">
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="box">
                         <div class="flex justify-center">
                             <div class="circle"><span class="fa-solid fa-mobile"></span></div>
@@ -73,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="box">
                         <div class="flex justify-center">
                             <div class="circle"><span class="fa-solid fa-location-dot"></span></div>
@@ -86,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="box">
                         <div class="flex justify-center"><div class="circle"><span class="fa-solid fa-envelope"></span></div>
                         </div>
@@ -104,7 +107,7 @@
         <div class="container">
             <h2>Skill</h2>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 col-p-12">
                     <div class="flex justify-space-bet">
                         <h3>HTML</h3>
                         <h3>88%</h3>
@@ -127,7 +130,7 @@
                         <progress value="88" max="100"></progress>    
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-p-12">
                     <div class="flex justify-space-bet">
                         <h3>JAVASCRIPT</h3>
                         <h3>50%</h3>
@@ -153,66 +156,70 @@
             </div>
         </div>
     </section>
-    <section class="wrap-6">
+    <section class="wrap-6" id="exp">
         <div class="container">
             <h2>Education</h2>
             <div class="row">
-                <div class="col-5">
-                    <div class="box1">
-                        <h3>Master of Computer Application(MCA)</h3>
-                        <h4>2021-2023</h4>
-                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-6 col-m-12">
+                            <div class="vertical-line">
+                                <div class="pos left-pos">
+                                    <span class="fa-regular fa-circle-dot circle"></span>
+                                    <div class="box1">
+                                        <h3>Master of Computer Application(MCA)</h3>
+                                        <h4>2021-2023</h4>
+                                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                                        <span class="fa-solid fa-caret-right left-arrow"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-1">
-                    <div class="vl">
-                        <div class="spna1"><span class="fa-regular fa-circle-dot"></span></div>
+                    <div class="row">
+                        <div class="col-6 col-m-12">
+                            <div class="vertical-line">
+                                <div class="pos right-pos">
+                                    <span class="fa-regular fa-circle-dot circle"></span>
+                                    <div class="box1">
+                                        <h3>Master of Computer Application(MCA)</h3>
+                                        <h4>2021-2023</h4>
+                                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                                        <span class="fa-solid fa-caret-left right-arrow"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-5"></div>
-                <div class="col-1">
-                    <div class="v2">
-                        <div class="spna2"><span class="fa-regular fa-circle-dot"></span></div>
+                    <div class="row">
+                        <div class="col-6 col-m-12">
+                           <div class="vertical-line">
+                                <div class="pos left-pos">
+                                    <span class="fa-regular fa-circle-dot circle"></span>
+                                    <div class="box1">
+                                        <h3>Master of Computer Application(MCA)</h3>
+                                        <h4>2021-2023</h4>
+                                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                                        <span class="fa-solid fa-caret-right left-arrow"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-1"></div>
-                <div class="col-5">
-                    <div class="box1">
-                        <h3>Bachaler of Computer Application(BCA)</h3>
-                        <h4>2017-2020</h4>
-                        <p>Dev Bhoomi Group of Institutions, Dehradun, Uttrakhand</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-5">
-                    <div class="box1">
-                        <h3>Intermediate (12<sup>th</sup>)</h3>
-                        <h4>2016-2017</h4>
-                        <p>Abhinav Public Inter College, Jaunpur, Uttar Pradesh</p>
-                    </div>
-                </div>
-                <div class="col-1">
-                    <div class="v3">
-                        <div class="spna3"><span class="fa-regular fa-circle-dot"></span></div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-5"></div>
-                <div class="col-1">
-                    <div class="v4">
-                        <div class="spna4"><span class="fa-regular fa-circle-dot"></span></div>
-                    </div>
-                </div>
-                <div class="col-1"></div>
-                <div class="col-5">
-                    <div class="box1">
-                        <h3>High School (10<sup>th</sup>)</h3>
-                        <h4>2014-2015</h4>
-                        <p>Abhinav Public Inter College, Jaunpur, Uttar Pradesh</p>
+                    <div class="row">
+                        <div class="col-6 col-m-12">
+                            <div class="vertical-line">
+                                <div class="pos right-pos">
+                                    <span class="fa-regular fa-circle-dot circle"></span>
+                                    <div class="box1">
+                                        <h3>Master of Computer Application(MCA)</h3>
+                                        <h4>2021-2023</h4>
+                                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                                        <span class="fa-solid fa-caret-left right-arrow"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -222,7 +229,7 @@
         <div class="container">
             <h2>My Services</h2>
             <div class="row">
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="ser">
                         <span class="fas fa-laptop-code"></span>
                         <h3>PSD to HTML</h3>
@@ -230,7 +237,7 @@
                         <a href="#">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="ser">
                         <span class="fa-solid fa-cloud"></span>
                         <h3>Fetch API</h3>
@@ -238,7 +245,7 @@
                         <a href="#">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="ser">
                         <span class="fa-brands fa-square-js"></span>
                         <h3>JavaScript</h3>
@@ -246,7 +253,7 @@
                         <a href="#">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="ser">
                         <span class="fa-brands fa-bootstrap"></span>
                         <h3>Bootstrap</h3>
@@ -254,7 +261,7 @@
                         <a href="#">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-4 col-m-6 col-p-12">
                     <div class="ser">
                         <span class="fa-brands fa-sass"></span>
                         <h3>SASS</h3>
@@ -265,26 +272,29 @@
             </div>
         </div>
     </section>
-    <section class="wrap-8">
+    <section class="wrap-8" id="portfolio">
         <div class="container">
            <div>
                 <h2>My Recent Work</h2>
                 <p class="para">Here are a few recent projects I've worked on.</p>
            </div>
-           <div class="btns flex justify-center">
-                <ul class="flex">
-                    <li><a href="">ALL</a></li>
-                    <li><a href="">HTML&CSS</a></li>
-                    <li><a href="">JAVASCRIPT</a></li>
-                    <li><a href="">BOOTSTRAP</a></li>
-                    <li><a href="">SASS</a></li>
-                    <li><a href="">REACT</a></li>
-                </ul>
+           <div class="row">
+                <div class="col-12">
+                    <div class="btns flex justify-center">
+                        <ul class="flex">
+                            <li><a href="">ALL</a></li>
+                            <li><a href="">HTML&CSS</a></li>
+                            <li><a href="">JAVASCRIPT</a></li>
+                            <li><a href="">BOOTSTRAP</a></li>
+                            <li><a href="">SASS</a></li>
+                            <li><a href="">REACT</a></li>
+                        </ul>
+                   </div>
+                </div>
            </div>
            <div class="row">
-                <div class="col-4">
-                    <div class="card">
-                        <img src="./Image/back10.jpg" alt="card" width="3000" height="2000">
+                <div class="col-6 col-p-12">
+                    <div class="card pro1">
                         <div class="details">
                             <h3>IDDO Project</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -292,9 +302,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
-                        <img src="./Image/back1.jpg" alt="card" width="3513" height="2338">
+                <div class="col-6 col-p-12">
+                    <div class="card pro2">
                         <div class="details">
                             <h3>IDDO Project</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -302,9 +311,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
-                        <img src="./Image/back10.jpg" alt="card" width="3000" height="2000">
+                <div class="col-6 col-p-12">
+                    <div class="card pro3">
                         <div class="details">
                             <h3>IDDO Project</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -312,9 +320,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
-                        <img src="./Image/back10.jpg" alt="card" width="3000" height="2000">
+                <div class="col-6 col-p-12">
+                    <div class="card pro4">
                         <div class="details">
                             <h3>IDDO Project</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -322,9 +329,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
-                        <img src="./Image/back10.jpg" alt="card" width="3000" height="2000">
+                <div class="col-6 col-p-12">
+                    <div class="card pro5">
                         <div class="details">
                             <h3>IDDO Project</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -332,9 +338,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card">
-                        <img src="./Image/back10.jpg" alt="card" width="3000" height="2000">
+                <div class="col-6 col-p-12">
+                    <div class="card pro6">
                         <div class="details">
                             <h3>IDDO Project</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -345,23 +350,23 @@
            </div>
         </div>
     </section>
-    <section class="wrap-9">
+    <section class="wrap-9" id="contact">
         <div class="container">
             <h2>Contact Me</h2>
             <div class="row">
-                <div class="col-6">
+                <div class="col-6 col-p-12">
                     <div class="contact">Contact Number : <a href="tel:">+91 7380415009</a></div>
                     <div class="contact">Email: <a href="mailto:">2000gauravjnp@gmail.com</a></div>
                     <div class="social">
                         <ul class="flex justify-center">
-                            <li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
-                            <li><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
-                            <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href=""><i class="fa-brands fa-square-instagram"></i></a></li>
+                            <li><a href="www.linkedin.com/in/gaurav-singh-729ba6194" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                            <li><a href="https://github.com/gauravsingh5009" target="_self"><i class="fa-brands fa-github"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-6">
+                <div class="col-6 col-p-12">
                     <div class="pic"><img src="./Image/Four.jpg" alt="Contact" width="2000" height="2000"></div>
                 </div>
             </div>
@@ -372,5 +377,8 @@
             <p>&copy; 2024 Gaurav Singh. All Rights Reserved</p>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>   
+    <script src="./JS/jsfile.js"></script> 
 </body>
 </html>
