--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <div class="col-12">
                     <div class="btns flex justify-center">
                         <ul class="flex">
-                            <li><a active href="">ALL</a></li>
+                            <li><a class="active"  href="">ALL</a></li>
                             <li><a  href="" >HTML&CSS</a></li>
                             <li><a  href="" >FETCH API</a></li>
                             <li><a  href="" >JAVASCRIPT</a></li>
