--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="row align-center justify-space-bet">
                     <div class="col-3">
-                        <h1>Portfolio</h1>
+                        <a href="#home"><h1>Portfolio</h1></a>
                     </div>
                     <div class="col-7">
                         <div class="collapse">
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="banner" role="banner">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-6 col-p-12 center">
                             <h2><i>HELLO, I AM</i></h2>
                             <h3><i>GAURAV SINGH</i></h3>
                             <h4>I am Fresher Web Designer</h4>
@@ -316,7 +316,7 @@
                                 <div class="details">
                                     <h3>IDDO Project</h3>
                                     <p>I've created a webpage using HTML, CSS, and JavaScript. It's a project based on PSD to HTML conversion.</p>
-                                    <div class="dbtn"><a href="#">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
+                                    <div class="dbtn"><a href="https://gauravsingh5009.github.io/IDDO-Psd-to-html/">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
                                 </div>
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                                 <div class="details">
                                     <h3>MICO Hospital Project</h3>
                                     <p>I've created a webpage using HTML, CSS, and JavaScript. It's a project based on PSD to HTML conversion.</p>
-                                    <div class="dbtn"><a href="#">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
+                                    <div class="dbtn"><a href="https://gauravsingh5009.github.io/Project-3-MICO/">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
                                 </div>
                             </div>
                         </div>
@@ -350,6 +350,15 @@
                                     <h3>BizLand Project</h3>
                                     <p>I've created a webpage using Bootstrap, CSS. It's a project based on Bootstrap framework.</p>
                                     <div class="dbtn"><a href="https://gauravsingh5009.github.io/Bootstrap-2/">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-p-12">
+                            <div class="card pro7 all">
+                                <div class="details">
+                                    <h3>BOOTSTRAP Project</h3>
+                                    <p>I've created a webpage using Bootstrap, CSS. It's a project based on Bootstrap framework.</p>
+                                    <div class="dbtn"><a href="https://gauravsingh5009.github.io/Bootstrap/">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
                                 </div>
                             </div>
                         </div>
