--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Portfolio</title>
+    <meta name="description" content="Portfolio is a webpage using Flexbox and Grids with Responsive and jQuery for functionalities">
+    <link rel="icon" href="./Image/about3.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    
 </head>
 <body>
     <header>
@@ -28,7 +31,7 @@
                                 </ul>
                             </nav>
                         </div>
-                        <button class="toggle"><span></span><span></span><span></span></button>
+                        <button aria-label="toggle" class="toggle"><span></span><span></span><span></span></button>
                     </div>
                 </div>
             </div>
@@ -187,9 +190,9 @@
                                 <div class="pos right-pos">
                                     <span class="fa-regular fa-circle-dot circle"></span>
                                     <div class="box1">
-                                        <h3>Master of Computer Application(MCA)</h3>
-                                        <h4>2021-2023</h4>
-                                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                                        <h3>Bachelor of Computer Application(BCA)</h3>
+                                        <h4>2017-2020</h4>
+                                        <p>Dev Bhoomi Group of Institutions, Dehradun, Uttarakhand</p>
                                         <span class="fa-solid fa-caret-left right-arrow"></span>
                                     </div>
                                 </div>
@@ -202,9 +205,9 @@
                                 <div class="pos left-pos">
                                     <span class="fa-regular fa-circle-dot circle"></span>
                                     <div class="box1">
-                                        <h3>Master of Computer Application(MCA)</h3>
-                                        <h4>2021-2023</h4>
-                                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                                        <h3>Intermediate (12<sup>th</sup>)</h3>
+                                        <h4>2016-2017</h4>
+                                        <p>Abhinav Public Inter College, Jaunpur, Uttar Pradesh</p>
                                         <span class="fa-solid fa-caret-right left-arrow"></span>
                                     </div>
                                 </div>
@@ -217,9 +220,9 @@
                                 <div class="pos right-pos">
                                     <span class="fa-regular fa-circle-dot circle"></span>
                                     <div class="box1">
-                                        <h3>Master of Computer Application(MCA)</h3>
-                                        <h4>2021-2023</h4>
-                                        <p>IIMT College of Engineering, Greater Noida, Uttar Pradesh</p>
+                                        <h3>High School (10<sup>th</sup>)</h3>
+                                        <h4>2014-2015</h4>
+                                        <p>Abhinav Public Inter College, Jaunpur, Uttar Pradesh</p>
                                         <span class="fa-solid fa-caret-left right-arrow"></span>
                                     </div>
                                 </div>
@@ -390,10 +393,10 @@
                     <div class="contact">Email: <a href="mailto:">2000gauravjnp@gmail.com</a></div>
                     <div class="social">
                         <ul class="flex justify-center">
-                            <li><a href="www.linkedin.com/in/gaurav-singh-729ba6194" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-                            <li><a href="https://github.com/gauravsingh5009" target="_self"><i class="fa-brands fa-github"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+                            <li><a aria-label="linkedin" href="www.linkedin.com/in/gaurav-singh-729ba6194" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
+                            <li><a aria-label="whatsapp" href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                            <li><a aria-label="github" href="https://github.com/gauravsingh5009" target="_self"><i class="fa-brands fa-github"></i></a></li>
+                            <li><a aria-label="instagram" href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
