update wrap-8 tabs

--- a/index.html
+++ b/index.html
@@ -289,9 +289,8 @@
            <div class="row">
                 <div class="col-12">
                     <div class="btns flex justify-center">
-                        <ul class="flex">
-                            <li><a class="active"  href="">ALL</a></li>
-                            <li><a  href="" >HTML&CSS</a></li>
+                        <ul>
+                            <li><a class="active"  href="" >HTML&CSS</a></li>
                             <li><a  href="" >FETCH API</a></li>
                             <li><a  href="" >JAVASCRIPT</a></li>
                             <li><a  href="" >BOOTSTRAP</a></li>
@@ -305,7 +304,7 @@
                 <div class="html">
                     <div class="row">
                         <div class="col-6 col-p-12">
-                            <div class="card pro1 all">
+                            <div class="card pro1">
                                 <div class="details">
                                     <h3>DENSO Project</h3>
                                     <p>I've created a webpage using HTML, CSS, and JavaScript. It's a project based on PSD to HTML conversion.</p>
@@ -335,7 +334,7 @@
                         </div>
     
                         <div class="col-6 col-p-12">
-                            <div class="card pro6 all">
+                            <div class="card pro6 ">
                                 <div class="details">
                                     <h3>MICO Hospital Project</h3>
                                     <p>I've created a webpage using HTML, CSS, and JavaScript. It's a project based on PSD to HTML conversion.</p>
@@ -345,10 +344,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="bootstrap">
+                <div class="bootstrap" hidden>
                     <div class="row">
                         <div class="col-6 col-p-12">
-                            <div class="card pro4 all">
+                            <div class="card pro4 ">
                                 <div class="details">
                                     <h3>BizLand Project</h3>
                                     <p>I've created a webpage using Bootstrap, CSS. It's a project based on Bootstrap framework.</p>
@@ -357,7 +356,7 @@
                             </div>
                         </div>
                         <div class="col-6 col-p-12">
-                            <div class="card pro7 all">
+                            <div class="card pro7 ">
                                 <div class="details">
                                     <h3>BOOTSTRAP Project</h3>
                                     <p>I've created a webpage using Bootstrap, CSS. It's a project based on Bootstrap framework.</p>
@@ -367,10 +366,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="sass">
+                <div class="sass" hidden>
                    <div class="row">
                     <div class="col-6 col-p-12">
-                        <div class="card pro5 all">
+                        <div class="card pro5 ">
                             <div class="details">
                                 <h3>AVENUE Fashion Project</h3>
                                 <p>It's a multipage website I made with HTML, SASS, and JavaScript.</p>
