--- a/index.html
+++ b/index.html
@@ -12,48 +12,50 @@
 </head>
 <body>
     <header>
-        <section class="wrap-1" id="home">
+        <section class="wrap-1">
             <div class="container">
-                <div class="row align-center justify-space-bet">
-                    <div class="col-3">
-                        <a href="#home"><h1>Portfolio</h1></a>
-                    </div>
-                    <div class="col-7">
-                        <div class="collapse">
-                            <nav>
-                                <ul class="flex justify-space-bet">
-                                    <li><a href="#home">HOME</a></li>
-                                    <li><a href="#about">ABOUT</a></li>
-                                    <li><a href="#services">SERVICES</a></li>
-                                    <li><a href="#portfolio">PORTFOLIO</a></li>
-                                    <li><a href="#education">EDUCATION</a></li>
-                                    <li><a href="#contact">CONTACT</a></li>
-                                </ul>
-                            </nav>
+                <div class="bgcolor">
+                    <div class="row align-center justify-space-bet">
+                        <div class="col-3">
+                            <a href="#home"><h1>Portfolio</h1></a>
                         </div>
-                        <button aria-label="toggle" class="toggle"><span></span><span></span><span></span></button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="wrap-2"> 
-            <div class="container">
-                <div class="banner" role="banner">
-                    <div class="row">
-                        <div class="col-6 col-p-12 center">
-                            <h2><i>HELLO, I AM</i></h2>
-                            <h3><i>GAURAV SINGH</i></h3>
-                            <h4>I am Fresher Web Designer</h4>
-                            <div class="btn">
-                                <a href="./CV/Gaurav-CV.pdf" download>Download CV</a>
-                                <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
+                        <div class="col-7">
+                            <div class="collapse">
+                                <nav>
+                                    <ul class="flex justify-space-bet">
+                                        <li><a href="#home">HOME</a></li>
+                                        <li><a href="#about">ABOUT</a></li>
+                                        <li><a href="#services">SERVICES</a></li>
+                                        <li><a href="#portfolio">PORTFOLIO</a></li>
+                                        <li><a href="#education">EDUCATION</a></li>
+                                        <li><a href="#contact">CONTACT</a></li>
+                                    </ul>
+                                </nav>
                             </div>
+                            <button aria-label="toggle" class="toggle"><span></span><span></span><span></span></button>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </header>
+    <section class="wrap-2" id="home"> 
+        <div class="container">
+            <div class="banner" role="banner">
+                <div class="row">
+                    <div class="col-6 col-p-12 center">
+                        <h2><i>HELLO, I AM</i></h2>
+                        <h3><i>GAURAV SINGH</i></h3>
+                        <h4>I am Fresher Web Designer</h4>
+                        <div class="btn">
+                            <a href="./CV/Gaurav-CV.pdf" download>Download CV</a>
+                            <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="wrap-3" id="about">
         <div class="container">
             <h2>ABOUT</h2>
@@ -116,49 +118,31 @@
             <h2>Skill</h2>
             <div class="row">
                 <div class="col-6 col-p-12">
-                    <div class="flex justify-space-bet">
-                        <h3>HTML</h3>
-                        <h3>88%</h3>
+                    <h3>HTML</h3>
+                    <div class="progress-bar">
+                        <div class="html"><span>86%</span></div>
                     </div>
-                    <div>
-                        <progress value="88" max="100"></progress>    
+                    <h3>CSS</h3>
+                    <div class="progress-bar">
+                        <div class="css"><span>76%</span></div>
                     </div>
-                    <div class="flex justify-space-bet">
-                        <h3>CSS</h3>
-                        <h3>85%</h3>
-                    </div>
-                    <div>
-                        <progress value="85" max="100"></progress>    
-                    </div>
-                    <div class="flex justify-space-bet">
-                        <h3>Bootstrap</h3>
-                        <h3>70%</h3>
-                    </div>
-                    <div>
-                        <progress value="88" max="100"></progress>    
+                    <h3>BOOTSTRAP</h3>
+                    <div class="progress-bar">
+                        <div class="boot"><span>69%</span></div>
                     </div>
                 </div>
                 <div class="col-6 col-p-12">
-                    <div class="flex justify-space-bet">
-                        <h3>JAVASCRIPT</h3>
-                        <h3>50%</h3>
+                    <h3>JAVASCRIPT</h3>
+                    <div class="progress-bar">
+                        <div class="js"><span>60%</span></div>
                     </div>
-                    <div>
-                        <progress value="50" max="100"></progress>    
+                    <h3>jQuery</h3>
+                    <div class="progress-bar">
+                        <div class="jquery"><span>65%</span></div>
                     </div>
-                    <div class="flex justify-space-bet">
-                        <h3>jQuery</h3>
-                        <h3>65%</h3>
-                    </div>
-                    <div>
-                        <progress value="65" max="100"></progress>    
-                    </div>
-                    <div class="flex justify-space-bet">
-                        <h3>SCSS</h3>
-                        <h3>75%</h3>
-                    </div>
-                    <div>
-                        <progress value="88" max="100"></progress>    
+                    <h3>REACT</h3>
+                    <div class="progress-bar">
+                        <div class="react"><span>56%</span></div>
                     </div>
                 </div>
             </div>
