Update skill css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="col-3">
                             <a href="#home"><h1>Portfolio</h1></a>
                         </div>
-                        <div class="col-7">
+                        <div class="col-8">
                             <div class="collapse">
                                 <nav>
                                     <ul class="flex justify-space-bet">
@@ -117,7 +117,7 @@
         <div class="container">
             <h2>Skill</h2>
             <div class="row">
-                <div class="col-6 col-p-12">
+                <div class="col-6 col-t-12">
                     <h3>HTML</h3>
                     <div class="progress-bar">
                         <div class="html"><span>86%</span></div>
@@ -131,7 +131,7 @@
                         <div class="boot"><span>69%</span></div>
                     </div>
                 </div>
-                <div class="col-6 col-p-12">
+                <div class="col-6 col-t-12">
                     <h3>JAVASCRIPT</h3>
                     <div class="progress-bar">
                         <div class="js"><span>60%</span></div>
@@ -233,7 +233,7 @@
                     <div class="ser">
                         <span class="fa-solid fa-cloud"></span>
                         <h3>Fetch API</h3>
-                        <p>The Fetch API simplifies HTTP requests and responses in modern JavaScript, enhancing web app functionality</p>
+                        <p>The Fetch API simplifies the HTTP requests and responses in a modern JavaScript, enhancing web app functionality</p>
                         <a href="#portfolio">Click here to visit </a>
                     </div>
                 </div>
