--- a/index.html
+++ b/index.html
@@ -118,31 +118,35 @@
             <h2>Skill</h2>
             <div class="row">
                 <div class="col-6 col-t-12">
-                    <h3>HTML</h3>
-                    <div class="progress-bar">
-                        <div class="html"><span>86%</span></div>
-                    </div>
-                    <h3>CSS</h3>
-                    <div class="progress-bar">
-                        <div class="css"><span>76%</span></div>
-                    </div>
-                    <h3>BOOTSTRAP</h3>
-                    <div class="progress-bar">
-                        <div class="boot"><span>69%</span></div>
+                    <div class="center">
+                        <h3>HTML</h3>
+                        <div class="progress-bar">
+                            <div class="html"><span>86%</span></div>
+                        </div>
+                        <h3>CSS</h3>
+                        <div class="progress-bar">
+                            <div class="css"><span>76%</span></div>
+                        </div>
+                        <h3>BOOTSTRAP</h3>
+                        <div class="progress-bar">
+                            <div class="boot"><span>69%</span></div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-6 col-t-12">
-                    <h3>JAVASCRIPT</h3>
-                    <div class="progress-bar">
-                        <div class="js"><span>60%</span></div>
-                    </div>
-                    <h3>jQuery</h3>
-                    <div class="progress-bar">
-                        <div class="jquery"><span>65%</span></div>
-                    </div>
-                    <h3>REACT</h3>
-                    <div class="progress-bar">
-                        <div class="react"><span>56%</span></div>
+                    <div class="center">
+                        <h3>JAVASCRIPT</h3>
+                        <div class="progress-bar">
+                            <div class="js"><span>60%</span></div>
+                        </div>
+                        <h3>jQuery</h3>
+                        <div class="progress-bar">
+                            <div class="jquery"><span>65%</span></div>
+                        </div>
+                        <h3>REACT</h3>
+                        <div class="progress-bar">
+                            <div class="react"><span>56%</span></div>
+                        </div>
                     </div>
                 </div>
             </div>
