--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                         </div>
                         <div>
                             <h2>Phone Number</h2>
-                            <a href="tel:">+91 7380415009</a> <br>
-                            <a href="tel:">+91 6392026686</a>
+                            <a href="tel: 7380415009">+91 7380415009</a> <br>
+                            <a href="tel: 6392026686">+91 6392026686</a>
                         </div>
                     </div>
                 </div>
@@ -105,8 +105,8 @@
                         </div>
                         <div>
                             <h2>Email</h2>
-                            <a href="mailto:">2000gauravjnp@gmail.com</a>
-                            <a href="mailto:">1900gauravsingh@gmail.com</a>
+                            <a href="mailto:2000gauravjnp@gmail.com">2000gauravjnp@gmail.com</a>
+                            <a href="mailto:1900gauravsingh@gmail.com">1900gauravsingh@gmail.com</a>
                         </div>
                     </div>
                 </div>
