Update linked link

--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
             <h2>Contact Me</h2>
             <div class="row">
                 <div class="col-6 col-p-12">
-                    <div class="contact">Contact Number : <a href="tel:">+91 7380415009</a></div>
-                    <div class="contact">Email: <a href="mailto:">2000gauravjnp@gmail.com</a></div>
+                    <div class="contact">Contact Number : <a href="tel:7380415009">+91 7380415009</a></div>
+                    <div class="contact">Email: <a href="mailto:2000gauravjnp@gmail.com">2000gauravjnp@gmail.com</a></div>
                     <div class="social">
                         <ul class="flex justify-center">
-                            <li><a aria-label="linkedin" href="www.linkedin.com/in/gaurav-singh-729ba6194" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
+                            <li><a aria-label="linkedin" href="https://www.linkedin.com/in/gaurav-singh-729ba6194/" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
                             <li><a aria-label="whatsapp" href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
                             <li><a aria-label="github" href="https://github.com/gauravsingh5009" target="_self"><i class="fa-brands fa-github"></i></a></li>
                             <li><a aria-label="instagram" href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
