Update image in Webp

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <meta name="description" content="Portfolio is a webpage using Flexbox and Grids with Responsive and jQuery for functionalities">
-    <link rel="icon" href="./Image/about3.jpg" type="image/x-icon">
+    <link rel="icon" href="./Image/Logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     
@@ -25,9 +25,9 @@
                                     <ul class="flex justify-space-bet">
                                         <li><a href="#home">HOME</a></li>
                                         <li><a href="#about">ABOUT</a></li>
+                                        <li><a href="#education">EDUCATION</a></li>
                                         <li><a href="#services">SERVICES</a></li>
                                         <li><a href="#portfolio">PORTFOLIO</a></li>
-                                        <li><a href="#education">EDUCATION</a></li>
                                         <li><a href="#contact">CONTACT</a></li>
                                     </ul>
                                 </nav>
@@ -52,6 +52,9 @@
                             <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
                         </div>
                     </div>
+                    <div class="col-6">
+                        <div class="img"><img src="./Image/GS2.webp" alt="Gaurav" width="400" height="356"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -65,8 +68,8 @@
                     <h4>Web Designer</h4>
                     <p>I'm a passionate web designer dedicated to creating visually appealing and user-friendly websites. Skilled in HTML, CSS, and JavaScript, I love turning creative ideas into engaging digital experiences. I'm always learning new things and eager to work with creative teams on exciting projects. My goal is to contribute to innovative projects and grow professionally in the dynamic world of web design. Welcome to my portfolio.</p>
                 </div>
-                <div class="col-5 col-t-5 col-p-12">
-                    <img src="./Image/about5.jpg" alt="coding" width="1000" height="667">
+                <div class="col-6 col-t-6 col-p-12">
+                    <div class="img"><img src="./Image/about1.webp" alt="coding" width="470" height="313"></div>
                 </div>
             </div>
         </div>
@@ -406,19 +409,26 @@
             <h2>Contact Me</h2>
             <div class="row">
                 <div class="col-6 col-p-12">
-                    <div class="contact">Contact Number : <a href="tel:7380415009">+91 7380415009</a></div>
-                    <div class="contact">Email: <a href="mailto:2000gauravjnp@gmail.com">2000gauravjnp@gmail.com</a></div>
-                    <div class="social">
-                        <ul class="flex justify-center">
-                            <li><a aria-label="linkedin" href="https://www.linkedin.com/in/gaurav-singh-729ba6194/" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
-                            <li><a aria-label="whatsapp" href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
-                            <li><a aria-label="github" href="https://github.com/gauravsingh5009" target="_self"><i class="fa-brands fa-github"></i></a></li>
-                            <li><a aria-label="instagram" href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
-                        </ul>
+                    <div class="addr">
+                        <address class="flex justify-center">
+                            Address: G -1560 Gaurs Siddhartham,<br>
+                            Siddharth Vihar, Ghaziabad, UP <br>
+                            Pin Code: 201009
+                        </address>
+                        <div class="contact">Contact Number : <a href="tel:7380415009">+91 7380415009</a></div>
+                        <div class="contact">Email: <a href="mailto:2000gauravjnp@gmail.com">2000gauravjnp@gmail.com</a></div>
+                        <div class="social">
+                            <ul class="flex justify-center">
+                                <li><a aria-label="linkedin" href="https://www.linkedin.com/in/gaurav-singh-729ba6194/" target="_self"><i class="fa-brands fa-linkedin"></i></a></li>
+                                <li><a aria-label="whatsapp" href="#"><i class="fa-brands fa-whatsapp"></i></a></li>
+                                <li><a aria-label="github" href="https://github.com/gauravsingh5009" target="_self"><i class="fa-brands fa-github"></i></a></li>
+                                <li><a aria-label="instagram" href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-6 col-p-12">
-                    <div class="pic"><img src="./Image/Four.jpg" alt="Contact" width="2000" height="2000"></div>
+                    <div class="pic"><img src="./Image/Contact.webp" alt="Contact" width="487" height="395"></div>
                 </div>
             </div>
         </div>
