Update image png to webp

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-p-12 center" id="change">
                         <div class="img"><img src="./Image/GS2.webp" alt="Gaurav" width="400" height="356"></div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
             </div>
             <div class="fetchapi" hidden>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 col-p-12">
                         <div class="card pro10 ">
                             <div class="details">
                                 <h3>Weather API</h3>
@@ -347,7 +347,7 @@
             </div>
             <div class="javascript" hidden>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 col-p-12">
                         <div class="card pro8 ">
                             <div class="details">
                                 <h3>Calculator</h3>
@@ -356,7 +356,7 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-p-12">
                         <div class="card pro9 ">
                             <div class="details">
                                 <h3>Stop Watch</h3>
