--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="./Image/Logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <header>
@@ -43,7 +44,7 @@
         <div class="container">
             <div class="banner" role="banner">
                 <div class="row">
-                    <div class="col-6 col-p-12 center">
+                    <div class="col-6 col-m-12 center">
                         <h2><i>HELLO, I AM</i></h2>
                         <h3><i>GAURAV SINGH</i></h3>
                         <h4>I am Fresher Web Designer</h4>
@@ -52,8 +53,8 @@
                             <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
                         </div>
                     </div>
-                    <div class="col-6 col-p-12 center" id="change">
-                        <div class="img"><img src="./Image/GS2.webp" alt="Gaurav" width="400" height="356"></div>
+                    <div class="col-6 col-m-12 center" id="change">
+                        <div class="img"><img src="./Image/New folder/15.webp" alt="Gaurav" width="450" height="400"></div>
                     </div>
                 </div>
             </div>
@@ -63,12 +64,12 @@
         <div class="container">
             <h2>ABOUT</h2>
             <div class="row">
-                <div class="col-6 col-t-7 col-p-12" id="orders">
+                <div class="col-6 col-t-7 col-m-12" id="orders" data-aos="zoom-in">
                     <h3>Gaurav Singh</h3>
                     <h4>Web Designer</h4>
                     <p>I'm a passionate web designer dedicated to creating visually appealing and user-friendly websites. Skilled in HTML, CSS, and JavaScript, I love turning creative ideas into engaging digital experiences. I'm always learning new things and eager to work with creative teams on exciting projects. My goal is to contribute to innovative projects and grow professionally in the dynamic world of web design. Welcome to my portfolio.</p>
                 </div>
-                <div class="col-6 col-t-6 col-p-12">
+                <div class="col-6 col-t-6 col-m-12" data-aos="zoom-in">
                     <div class="img"><img src="./Image/about1.webp" alt="coding" width="470" height="313"></div>
                 </div>
             </div>
@@ -77,7 +78,7 @@
     <section class="wrap-5">
         <div class="container">
             <div class="row">
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="box">
                         <div class="flex justify-center">
                             <div class="circle"><span class="fa-solid fa-mobile"></span></div>
@@ -89,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="box">
                         <div class="flex justify-center">
                             <div class="circle"><span class="fa-solid fa-location-dot"></span></div>
@@ -102,7 +103,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="box">
                         <div class="flex justify-center"><div class="circle"><span class="fa-solid fa-envelope"></span></div>
                         </div>
@@ -228,7 +229,7 @@
         <div class="container">
             <h2>My Services</h2>
             <div class="row">
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="ser">
                         <span class="fas fa-laptop-code"></span>
                         <h3>PSD to HTML</h3>
@@ -236,7 +237,7 @@
                         <a href="#portfolio">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="ser">
                         <span class="fa-solid fa-cloud"></span>
                         <h3>Fetch API</h3>
@@ -244,15 +245,15 @@
                         <a href="#portfolio">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="ser">
                         <span class="fa-brands fa-square-js"></span>
                         <h3>JavaScript</h3>
-                        <p>JavaScript is a versatile programming language for creating dynamic and interactive elements on web pages.</p>
+                        <p>JavaScript is a versatile programming language for creating dynamic and interactive elements on modern web pages.</p>
                         <a href="#portfolio">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="ser">
                         <span class="fa-brands fa-bootstrap"></span>
                         <h3>Bootstrap</h3>
@@ -260,7 +261,7 @@
                         <a href="#portfolio">Click here to visit </a>
                     </div>
                 </div>
-                <div class="col-4 col-m-6 col-p-12">
+                <div class="col-4 col-m-6 col-p-12" data-aos="zoom-in">
                     <div class="ser">
                         <span class="fa-brands fa-sass"></span>
                         <h3>SASS</h3>
@@ -294,7 +295,7 @@
            
             <div class="html">
                 <div class="row">
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro1">
                             <div class="details">
                                 <h3>DENSO Project</h3>
@@ -303,7 +304,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro2">
                             <div class="details">
                                 <h3>IDDO Project</h3>
@@ -312,7 +313,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro3">
                             <div class="details">
                                 <h3>BlueRex Project</h3>
@@ -321,7 +322,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro6 ">
                             <div class="details">
                                 <h3>MICO Hospital Project</h3>
@@ -334,7 +335,7 @@
             </div>
             <div class="fetchapi" hidden>
                 <div class="row">
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro10 ">
                             <div class="details">
                                 <h3>Weather API</h3>
@@ -347,7 +348,7 @@
             </div>
             <div class="javascript" hidden>
                 <div class="row">
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro8 ">
                             <div class="details">
                                 <h3>Calculator</h3>
@@ -356,7 +357,7 @@
                             </div>
                         </div> 
                     </div>
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro9 ">
                             <div class="details">
                                 <h3>Stop Watch</h3>
@@ -369,7 +370,7 @@
             </div>
             <div class="bootstrap" hidden>
                 <div class="row">
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro4 ">
                             <div class="details">
                                 <h3>BizLand Project</h3>
@@ -378,7 +379,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-p-12">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
                         <div class="card pro7 ">
                             <div class="details">
                                 <h3>BOOTSTRAP Project</h3>
@@ -391,7 +392,7 @@
             </div>
             <div class="sass" hidden>
                <div class="row">
-                <div class="col-6 col-p-12">
+                <div class="col-6 col-p-12" data-aos="zoom-in-up">
                     <div class="card pro5 ">
                         <div class="details">
                             <h3>AVENUE Fashion Project</h3>
@@ -440,6 +441,7 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./JS/jsfile.js"></script> 
 </body>
 </html>
