--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="col-6 col-m-12 center">
                         <h2><i>HELLO, I AM</i></h2>
                         <h3><i>GAURAV SINGH</i></h3>
-                        <h4>I am Fresher Web Designer</h4>
+                        <h4>I am Fresher Frontend Developer</h4>
                         <div class="btn">
                             <a href="./CV/Gaurav-CV.pdf" download>Download CV</a>
                             <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
