--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="container">
             <h2>Skill</h2>
             <div class="row">
-                <div class="col-6 col-t-12">
+                <div class="col-6 col-m-12 col-t-12">
                     <div class="center">
                         <h3>HTML</h3>
                         <div class="progress-bar">
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-6 col-t-12">
+                <div class="col-6 col-m-12 col-t-12">
                     <div class="center">
                         <h3>JAVASCRIPT</h3>
                         <div class="progress-bar">
