--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="row">
                 <div class="col-6 col-t-7 col-m-12" id="orders" data-aos="zoom-in">
                     <h3>Gaurav Singh</h3>
-                    <h4>Web Designer</h4>
-                    <p>I'm a passionate web designer dedicated to creating visually appealing and user-friendly websites. Skilled in HTML, CSS, and JavaScript, I love turning creative ideas into engaging digital experiences. I'm always learning new things and eager to work with creative teams on exciting projects. My goal is to contribute to innovative projects and grow professionally in the dynamic world of web design. Welcome to my portfolio.</p>
+                    <h4>Frontend Developer</h4>
+                    <p>I'm a passionate Frontend Developer dedicated to creating visually appealing and user-friendly websites. Skilled in HTML, CSS, and JavaScript, React. I love turning creative ideas into engaging digital experiences. I'm always learning new things and eager to work with creative teams on exciting projects. My goal is to contribute to innovative projects and grow professionally in the dynamic world of Frontend Developer. Welcome to my portfolio.</p>
                 </div>
                 <div class="col-6 col-t-6 col-m-12" data-aos="zoom-in">
                     <div class="img"><img src="./Image/about1.webp" alt="coding" width="470" height="313"></div>
