--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <h3><i>GAURAV SINGH</i></h3>
                         <h4>I am Fresher Frontend Developer</h4>
                         <div class="btn">
-                            <a href="./CV/Gaurav-CV.pdf" download>Download CV</a>
+                            <a href="./CV/Gaurav Resume.pdf" download>Download CV</a>
                             <a href="https://github.com/gauravsingh5009" target="_self">Visit Github</a>
                         </div>
                     </div>
