--- a/index.html
+++ b/index.html
@@ -403,6 +403,28 @@
                 </div>
                </div>
             </div>
+            <div class="react" hidden>
+                <div class="row">
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
+                        <div class="card pro11 ">
+                            <div class="details">
+                                <h3>Weather Page</h3>
+                                <p>It's a Weather API Application I made with REact, Axios, and CSS.</p>
+                                <div class="dbtn"><a href="https://weather-page-gs.netlify.app/">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="col-6 col-p-12" data-aos="zoom-in-up">
+                        <div class="card pro12 ">
+                            <div class="details">
+                                <h3>Todo List</h3>
+                                <p>It's a Todo List Application I made with React, Hook, and CSS.</p>
+                                <div class="dbtn"><a href="https://todo-list009.netlify.app/">Visit Website <span class=" fa-solid fa-angle-right"></span></a></div>
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="wrap-9" id="contact">
